# PvZ-Portable

./: CMakeLists.txt  LawnApp.cpp  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  switch.yml  windows_x86.yml
Lawn/: Challenge.cpp  CutScene.cpp  ZenGarden.cpp
Lawn/System/: PoolEffect.cpp  SaveGame.cpp
Lawn/Widget/: ChallengeScreen.cpp  TitleScreen.cpp
Sexy.TodLib/: Definition.cpp  Reanimator.cpp  TodCommon.cpp  TodParticle.cpp
SexyAppFramework/: SexyAppBase.cpp  SexyAppBase.h
SexyAppFramework/graphics/: GLImage.cpp  GLImage.h  GLInterface.cpp  GLInterface.h  Graphics.cpp  MemoryImage.cpp  SysFont.cpp
SexyAppFramework/misc/: ResourceManager.cpp
SexyAppFramework/sound/: BassMusicInterface.cpp
SexyAppFramework/widget/: ButtonWidget.cpp  Widget.cpp  WidgetManager.cpp
android/app/src/main/java/io/github/wszqkzqk/pvzportable/: PvZPortableActivity.java
archlinux/: PKGBUILD  PKGBUILD-AUR
ios/: build-ios.sh
src/: ConstEnums.h  LawnApp.cpp  LawnApp.h  Resources.cpp  Resources.h  main.cpp
src/Lawn/: Board.cpp  Board.h  BoardInclude.h  Challenge.cpp  Challenge.h  Coin.cpp  Coin.h  CursorObject.cpp  CursorObject.h  CutScene.cpp  Cutscene.h  GameObject.cpp  GridItem.cpp  GridItem.h  LawnCommon.cpp  LawnCommon.h  LawnMower.cpp  LawnMower.h  MessageWidget.cpp  MessageWidget.h  Plant.cpp  Plant.h  Projectile.cpp  Projectile.h  SeedPacket.cpp  SeedPacket.h  ToolTipWidget.cpp  ToolTipWidget.h  ZenGarden.cpp  ZenGarden.h  Zombie.cpp  Zombie.h
src/Lawn/System/: DataSync.cpp  DataSync.h  Music.cpp  Music.h  PlayerInfo.cpp  PlayerInfo.h  PoolEffect.cpp  PoolEffect.h  ProfileMgr.cpp  ProfileMgr.h  ReanimationLawn.cpp  SaveGame.cpp  SaveGame.h  TypingCheck.cpp
src/Lawn/Widget/: AchievementsScreen.cpp  AchievementsScreen.h  AlmanacDialog.cpp  AlmanacDialog.h  AwardScreen.cpp  AwardScreen.h  ChallengeScreen.cpp  ChallengeScreen.h  CheatDialog.h  ContinueDialog.cpp  ContinueDialog.h  CreditScreen.cpp  CreditScreen.h  GameButton.cpp  GameButton.h  GameSelector.cpp  GameSelector.h  ImitaterDialog.cpp  LawnDialog.cpp  LawnDialog.h  NewOptionsDialog.cpp  NewOptionsDialog.h  NewUserDialog.cpp  NewUserDialog.h  SeedChooserScreen.cpp  SeedChooserScreen.h  StoreScreen.cpp  StoreScreen.h  TitleScreen.cpp  TitleScreen.h  UserDialog.cpp  UserDialog.h
src/Sexy.TodLib/: Attachment.cpp  Attachment.h  Definition.cpp  Definition.h  EffectSystem.cpp  EffectSystem.h  FilterEffect.cpp  ReanimAtlas.cpp  Reanimator.cpp  Reanimator.h  TodCommon.cpp  TodCommon.h  TodDebug.cpp  TodDebug.h  TodDrawTriangle.cpp  TodFoley.cpp  TodFoley.h  TodList.cpp  TodParticle.cpp  TodParticle.h  TodStringFile.cpp  TodStringFile.h  Trail.cpp  Trail.h
src/SexyAppFramework/: Common.cpp  Common.h  SexyApp.h  SexyAppBase.cpp  SexyAppBase.h
src/SexyAppFramework/graphics/: Color.cpp  Color.h  GLInterface.cpp  GLInterface.h  GLPlatform.h  Graphics.cpp  Image.h  ImageFont.cpp  MemoryImage.h  NativeDisplay.h  Quantize.cpp  Quantize.h  SWTri.cpp  SWTri.h  SharedImage.h  TriVertex.h
src/SexyAppFramework/graphics/SWTri/: SWTri_DrawTriangle.cpp  SWTri_GetTexel.cpp  SWTri_Loop.cpp  SWTri_Pixel555.cpp  SWTri_TexelARGB.cpp
src/SexyAppFramework/imagelib/: ImageLib.cpp  ImageLib.h
src/SexyAppFramework/misc/: Debug.cpp  Debug.h  DescParser.h  Flags.cpp  KeyCodes.h  ModVal.h  PerfTimer.cpp  Point.h  PropertiesParser.h  Rect.h  ResourceManager.cpp  ResourceManager.h  SexyMatrix.h  SexyVector.h  XMLParser.cpp  memmgr.h
src/SexyAppFramework/paklib/: PakInterface.cpp  PakInterface.h
src/SexyAppFramework/platform/3ds/graphics/: GLInterface.cpp  GLInterface.h  Window.cpp
src/SexyAppFramework/platform/default/: Input.cpp
src/SexyAppFramework/platform/switch/: Input.cpp
src/SexyAppFramework/sound/: SDLSoundInstance.h  SDLSoundManager.cpp  SDLSoundManager.h  SoundManager.h
src/SexyAppFramework/sound/SDL-Mixer-X/: CMakeLists.txt
src/SexyAppFramework/widget/: ButtonWidget.cpp  ButtonWidget.h  Checkbox.h  Dialog.cpp  DialogButton.h  EditWidget.h  HyperlinkWidget.cpp  HyperlinkWidget.h  Slider.cpp  Slider.h  TextWidget.h  WidgetManager.h
wasm/: build-wasm.sh  shell.html
